--- a/第7章 类/第7章 类.md
+++ b/第7章 类/第7章 类.md
@@ -115,44 +115,1630 @@ int main()
 
 ### 7.1.2 定义改进的Sales_data类
 
+```cpp
+struct Sales_data {
+    // 新成员：关于 Sales_data 对象的操作
+    std::string isbn() const { return bookNo; }
+    Sales_data& combine(const Sales_data&);
+    double avg_price() const;
 
+    std::string bookNo;
+    unsigned units_sold = 0;
+    double revenue = 0.0;
+};
+// Sales_data 的非成员接口函数
+Sales_data add(const Sales_data&, const Sales_data&);
+std::ostream &print(std::ostream&, const Sales_data&);
+std::istream &read(std::istream&, Sales_data&);
+```
+
+- 定义成员函数的方式与普通函数差不多。成员函数的声明必须在类的内部，它的定义则既可以在类的内部也可以在类的外面。
+- 作为借口组成部分的非成员函数，例如`add`、`read`和`print`等，它们的定义和声明都在类的外部。
+
+#### 定义成员函数
+
+尽管所有成员都必须在类的内部声明，但是成员函数体可以定义在类内也可以定义在类外。
+
+#### 引入`this`
+
+成员函数的调用，如用点运算符来访问`total`对象的`isbn`成员，然后调用它:
+
+```cpp
+total.isbn()
+// 实际上它隐式地返回：
+total.bookNo
+```
+
+如果`isbn`指向`Sales_data`的成员（例如`bookNo`），则它隐式地指向调用该函数的对象的成员。在上面所示的调用中，当`isbn`返回`bookNo`时，实际上它隐式地返回**`total.bookNo`**。
+
+成员函数通过一个名为`this`的额外的隐式参数来访问调用它的那个对象。
+当我们调用一个成员函数时，用请求该函数的对象地址初始化`this`。
+例如，如果调用`total.isbn()`，则编译器负责把`total`的地址传递给`isbn`的饮食形参`this`，可以等价地认为编译器将该调用重写成了如下的形式：
+其中调用`Sales_data`的`isbn`成员时传入了`total`的地址。
+
+```cpp
+// 伪代码，用于说明调用成员函数的实际执行过程
+Sales_data::isbn(&total)
+```
+
+在成员函数内部，我们可以直接使用调用该函数的对象的成员，二无须通过成员访问运算符来做到这一点，因为`this`所指的正式这个对象。
+任何对类成员的直接访问都被看作`this`的隐式引用。
+也就是说，当`isbn`使用`bookNo`时，它隐式地使用`this`指向的成员，就像我们书写了`this->bookNo`一样。
+
+对于我们来说，`this`形参是隐式定义的。实际上，任何自定义名为`this`的参数或变量的行为都是非法的。
+我们可以在成员函数体内部使用`this`，因此尽管没有必要，但我们还是能把`isbn`定义成如下的形式：
+
+```cpp
+std::string isbn() const { return this -> bookNo; }
+```
+
+因为`this`的目的总是指向“这个”对象，所以`this`是一个常量指针，我们不允许改变`this`中保存的地址。
+
+#### 引入`const`成员函数
+
+p231
+
+`const`的作用是修改隐式`this`指针的类型。
+
+默认情况下，`this`的类型是指向类类型非常量版本的常量指针。（疑惑：看不懂）
+例如在`Sales_data`成员函数中，`this`的类型是`Sales_data *const`。
+我们不能在一个常量对象上调用普通的成员函数。
+
+由于`this`是隐式的，并且不会出现在参数列表中，所以在哪儿将`this`声明成指向常量的指针就成为我们必须面对的问题。
+C++允许把`const`关键字放在成员函数的参数列表之后，此时紧跟在参数列表后的`const`表示`this`是一个指向常量的指针。
+像这样使用`const`的成员函数被称作**常量成员函数** (const member function)。
+
+```cpp
+// 可以把 isbn 的函数体想象成如下的形式:
+// 伪代码，说明隐式的 this 指针是如何使用的
+// 下面的代码是非法的：因为我们不能显式地定义自己的 this 指针
+// 谨记此处的 this 是一个指向常量的指针，因为 isbn 是一个常量成员
+std::string Sales_data::isbn(const Sales_data *const this)
+    { return this -> isbn};
+```
+
+因为`this`是指向常量的指针，所以常量成员函数不能改变调用它的对象的内容。
+在上例中，`isbn`可以读取调用它的对象的数据成员，但是不能写入新值。
+
+**Note: 常量对象，以及常量对象的引用或指针，都只能调用常量成员函数。**
+
+#### 类作用域和成员函数
+
+类本身就是一个作用域。类的成员函数的定义嵌套在类的作用域之内。
+`isbn`中用到的名字`bookNo`其实就是定义在`Sales_data`内的数据成员。
+
+由于编译器分两步处理类：首先编译成员的声明，然后才轮到成员函数体（如果有的话）。
+因此，成员函数体可以随意使用类中的其他成员而无须在意这些成员出现的次序。
+
+#### 在类的外部定义成员函数
+
+如果成员被声明成常量成员函数，那么它的定义也必须在参数列表后明确指定`const`属性。
+同时，类外部定义的成员的名字必须包含它所属的类名：
+
+```cpp
+double Sales_data::avg_price() const {
+    if (units_sold)
+        return revenue / units_sold;
+    else
+        return 0;
+}
+```
+
+函数名`Sales_data::avg_price`使用作用域运算符来说明如下的事实：定义了一个名为`avg_price`的函数，并且该函数被声明在类`Sales_data`的作用域内。
+因此，当`avg_price`使用`revenue`和`units_sold`时，实际上它隐式地使用了`Sales_data`的成员。
+
+#### 定义一个返回`this`对象的函数
+
+```cpp
+Sales_data& Sales_data::combine(const Sales_data &rhs)
+{
+    units_sold += rhs.units_sold;   // 把 rhs 的成员加到 this 对象的成员上
+    revenue += rhs.revenue;
+    return *this;                   // 返回调用该函数的对象
+}
+
+// 当我们的交易处理程序调用如下的函数时，
+total.combine(trans);               // 更新变量 total 当前的值
+```
+
+当`combie`执行下面的语句时，
+
+```cpp
+units_sold += rhs.units_sold;       // 把 rhs的成员添加到 this 对象的成员中
+```
+
+效果等同于求`total.units_sold`和`trans.units_sold`的和，然后把结果保存到`total.units_sold`中。
+
+另外，返回类型和返回语句，为了保持一致，`combine`函数必须返回引用类型。
+因为此时的左侧运算对象是一个`Sales_data`的对象，所以返回类型应该是`Sales_data&`。
+
+```cpp
+return *this;                       // 返回调用该函数的对象
+```
+
+其中，`return`语句解引用`this`指针以获得执行该函数的对象。换句话说，上面的这个调用返回`total`的引用。
+
+**练习7.5：在你的 Person 类中提供一些操作使其能够返回姓名和住址。**
+
+```cpp
+/* 练习7.5：在你的 Person 类中提供一些操作使其能够返回姓名和住址。
+这些函数是否应该是 const 的呢？解释原因。*/
+
+class Person
+{
+private:
+    string strName;
+    string strAddress;
+public:
+    string getName() const { return strName; }          // 返回姓名
+    string getAddress() const { return strAddress; }    // 返回地址
+};
+```
+
+我们把数据成员`strName`和`strAddress`设置为`private`，这样可以避免用户程序不经意间修改和破坏它们；
+同时把构造函数和两个获取数据成员的接口函数设置为`public`，以便于我们在类的外部访问。
 
 ### 7.1.3 定义类相关的非成员函数
 
-### 7.1.4 构造函数
+#### 定义`read`和`print`函数
+
+`read`函数从给定流中将数据读到给定的对象里，`print`函数则负责将给定对象的内容打印到给定的流中。
+
+```cpp
+// 输入的交易信息包括 ISBN、售出总数和售出价格
+istream &read(istream &is, Sales_data &item)
+{
+    double price = 0;
+    is >> item.bookNo >> item.units_sold >> price;
+    item.revenue = price * item.units_sold;
+    return is;
+}
+
+ostream &print(ostream &os, const Sales_data &item)
+{
+    os << item.isbn() << " " << item.units_sold << " "
+       << item.revenue << " " << item.avg_price();
+    return os;
+}
+```
+
+**练习7.8：为什么`read`函数将其`Sales_data`参数定义成普通的引用，而`print`将其参数定义成常量引用？**
+
+`read`函数将其`Sales_data`参数定义成普通的引用是因为我们需要从标准输入流中读取数据并将其写入到给定的`Sales_data`对象，因此需要有修改对象的权限。
+
+而`print`将其参数定义成常量引用是因为它只负责数据的输出，不对其做任何更改。
+
+**练习7.9：仿照 Sales_data类，为 Person 类添加相应的 read 和 print 函数。**
+
+```cpp
+/* 练习7.9：对于7.1.2节(p233)练习中的代码，添加读取和打印Person对象的操作。
+
+【出题思路】仿照 Sales_data类，为 Person 类添加相应的 read 和 print 函数。*/
+
+std::istream &read(std::istream &is, Person &per)
+{
+    is >> per.strName >> per.strAddress;
+    return is;
+}
+
+std::ostream &print(std::ostream &os, const Person &per)
+{
+    os << per.getName() << per.getAddress();
+    return os;
+}
+
+
+/* 练习7.5：在你的 Person 类中提供一些操作使其能够返回姓名和住址。
+这些函数是否应该是 const 的呢？解释原因。*/
+
+class Person
+{
+private:
+    string strName;
+    string strAddress;
+public:
+    string getName() const { return strName; }          // 返回姓名
+    string getAddress() const { return strAddress; }    // 返回地址
+};
+```
+
+**练习7.10：在下面这条`if`语句中，条件部分的作用是什么？**
+
+```cpp
+if (read(read(cin, data1)), data2)
+```
+
+【出题思路】`read`函数的返回类型是`std::istream &`，体会这里使用引用的作用。
+
+【解答】
+因为`read`函数的返回类型是引用，所以`read(cin, data1)`的返回值可以继续作为外层`read`函数的实参使用。
+该条件检验读入`data1`和`data2`的过程是否正确，如果正确，条件满足；否则条件不满足。
+
+#### 定义`add`函数
+
+`add`函数接受两个`Sales_data`对象作为其参数，返回值是一个新的`Sales_data`，用于表示前两个对象的和：
+
+```cpp
+Sales_data add(const Sales_data &lhs, const Sales_data &rhs)
+{
+    Sales_data sum = lhs;   // 把 lhs 的数据成员拷贝给 sum
+    sum.combine(rhs);       // 把 rhs 的数据成员加到 sum 当中
+    return sum;
+}
+```
+
+**练习7.7：使用这些新函数重写 7.1.2节(p233) 练习中的交易处理程序。**
+
+```cpp
+/* 练习7.7：使用这些新函数重写 7.1.2节(p233) 练习中的交易处理程序。
+
+【出题思路】用 read 函数替代 >>，print 函数替代 <<，add 函数替代 combine 函数。
+*/
+
+#include <iostream>
+#include "Sales_data.h"
+using namespace std;
+
+int main()
+{
+    cout << "请输入交易记录（ISBN、销售量、原价、实际售价：）" << endl;
+    Sales_data total;
+    // 读入第一条交易记录，并确保有数据可以处理
+    if ( read(cin, total))
+    {
+        Sales_data trans;           // 保存和的变量
+        while(read(cin, trans))     // 读入并处理剩余交易记录
+        {
+            if (total.isbn() == trans.isbn())   // 如果我们仍在处理相同的书
+                total = add(total, trans);      // 更新总销售额
+            else
+            {
+                print(cout, total); // 打印前一本书的结果
+                cout << endl;
+                total = trans;      // total 现在表示下一本书的销售额
+            }
+        }
+        print(cout, total);         // 打印最后一本书的结果
+        cout << endl;
+    }
+    else
+    {
+        cerr << "No data?!" << endl;// 没有输入！警告读者
+        return -1;                  // 表示失败
+    }
+    return 0;
+}
+```
+
+### 7.1.4 构造函数 (constructor)
+
+每个类都分别定义了它的对象被初始化的方式，类通过一个或几个特殊的成员函数来控制其对象的初始化过程，这些函数叫做**构造函数**(constructor)。构造函数的任务是初始化类对象的数据成员，无论何时只要类的对象被创建，就会执行构造函数。
+
+**构造函数的名字和类名相同**。构造函数**没有返回类型**。
+类似于其他的函数，构造函数也有一个（可能为空的）参数列表和一个（可能为空的）函数体。
+
+#### 合成的默认构造函数
+
+类通过一个特殊的构造函数来控制默认初始化过程，这个函数叫做**默认构造函数**(default constructor)，默认构造函数无须任何实参。如果我们的类没有显式地定义构造函数，那么编译器就会为我们隐式地顶一个默认构造函数。
+
+编译器创建的构造函数又被成为**合成的默认构造函数**(synthesized default constructor)。
+
+#### 某些类不能依赖于合成的默认构造函数
+
+**Note**: 只有当类没有声明任何构造函数时，编译器才会自动地生成默认的构造函数。
+
+**WARNING**: 如果类包含有内置类型或者复合类型的成员，则只有当这些成员全都被赋予了类内的初始值时，这个类才适合于使用合成的默认构造函数。
+
+#### 定义`Sales_data`的构造函数
+
+对于我们的`Sales_data`类来说，我们将使用下面的参数定义 4 个不同的构造函数：
+
+- 一个`istream&`，从中读取一条交易信息
+- 一个`const string&`，表示`ISBN`编号；一个`unsigned`，表示售出的图书数量；以及一个`double`，表示图书的售出价格。
+- 一个`const string&`，表示`ISBN`编号；编译器将赋予其他成员默认值。
+- 一个空参数列表（即默认构造函数），正如刚刚介绍的，既然我们已经定义了其他构造函数，那么也必须顶一个默认构造函数。
+
+```cpp
+struct Sales_data {
+    // 新增的构造函数
+    Sales_data() = default;
+    Sales_data(const std::string &s) : bookNo(s) { }
+    Sales_data(const std::string &s, unsigned n, double p) :
+              bookNo(s), units_sold(n), revenue(p*n) { }
+    Sales_data(std::istream &);
+    // 之前已有的其他成员
+    std::string isbn() const { return bookNo; }
+    Sales_data& combine(const Sales_data&);
+    double avg_price() const;
+    std::string bookNo;
+    unsigned units_sold = 0;
+    double revenue = 0.0;
+};
+```
+
+#### `=default`的含义
+
+```cpp
+// 默认构造函数：
+Sales_data() = default;
+```
+
+因为该默认构造函数不接受任何实参，所以它是一个默认构造函数。
+我们定义这个构造函数的目的仅仅是因为我们既需要其他形式的构造函数，也需要默认的构造函数。
+
+#### 构造函数初始值列表
+
+```cpp
+Sales_data(const std::string &s) : bookNo(s) { }
+Sales_data(const std::string &s, unsigned n, double p) :
+           bookNo(s), units_sold(n), revenue(p*n) { }
+```
+
+出现的新的部分，即冒号以及冒号和花括号之间的代码，其中花括号定义了（空的）函数体。
+我们把新出现的部分称为**构造函数初始值列表**(constructor initialize list)，它负责为新创建的对象的一个或几个数据成员赋初值。
+
+```cpp
+// 与上面定义的那个构造函数效果相同
+Sales_data(const std::string &s) :
+           bookNo(s), units_sold(0), revenue(0) { }
+```
+
+只有一个`string`类型参数的构造函数使用这个`string`对象初始化`bookNo`，对于`units_sold`和`revenue`则没有显式地初始化。
+当某个数据成员被构造函数初始值列表忽略时，它将以与合成默认构造函数相同的方式隐式初始化。
+
+**练习7.14：编写一个构造函数，令其用我们提供的类内初始值显式地初始化成员。**
+
+```cpp
+/* 练习7.14：编写一个构造函数，令其用我们提供的类内初始值显式地初始化成员。
+
+【出题思路】构造函数初始值列表负责为新创建的对象的一个或几个数据成员赋初值。
+构造函数初始值是成员名字的一个列表，每个名字后面紧跟括号括起来的成员初始值，
+不同成员的初始化通过逗号分隔开。 */
+
+Sales_data (const std::string &book)
+    : bookNo(book), units_sold(0), sellingprice(0), saleprice(0), discount(0) { }
+```
+
+#### 在类的外部定义构造函数
+
+与其他几个构造函数不同，以`istream`为参数的构造函数需要执行一些实际的操作。
+在它的函数体内，调用了`read`函数以给数据成员赋以初值：
+
+```cpp
+Sales_data::Sales_data(std::istream &is)
+{
+    read(is, *this);    // read 函数的作用是从 is 中读取一条交易信息然后
+                        // 存入 this 对象中
+}
+```
+
+`Sales_data::Sales_data`的含义是我们定义`Sales_data`类的成员，它的名字是`Sales_data`。又因为该成员的名字和类名相同，所以它是一个构造函数。
+
+这个构造函数没有构造函数初始值列表，或者说，它的构造函数初始值列表时是空的。
+尽管构造函数初始值列表是空的，但是由于执行了构造函数体，所以对象的成员仍然能被初始化。
+
+特别注意`read`的第二个参数是一个`Sales_data`对象的引用。
+使用`this`来把对象当成一个整体访问，而非直接访问对象的某个成员。
+因此在此例中，我们使用`*this`将 "this" 对象作为实参传递给`read`函数。
+
+**练习7.11：在你的 Sales_data 类中添加构造函数，然后编写一段程序令其用到每个构造函数。**
+
+```cpp
+/* 练习7.11：在你的 Sales_data 类中添加构造函数，然后编写一段程序令其用到每个构造函数。
+
+【出题思路】在不同情况下，初始化 Sales_data 对象所需的数据有所不同，分别为其设计构造函数，
+同时也利用C++11新标准提供的 =default 定义默认构造函数。*/
+
+#include <iostream>
+using namespace std;
+
+class Sales_data
+{
+public:                         // 构造函数的 4 种形式
+    Sales_data() = default;
+    Sales_data(const std::string &book) : bookNo(book) { }
+    Sales_data(const std::string &book, const unsigned num,
+               const double sellp, const double salep);
+    Sales_data(std::istream &is);
+public:
+    std::string bookNo;         // 书籍编号，隐式初始化为空串
+    unsigned units_sold = 0;    // 销售量，显式初始化为 0
+    double sellingprice = 0.0;  // 原始价格，显式初始化为 0.0
+    double saleprice = 0.0;     // 实售价格，显式初始化为 0.0
+    double discount = 0.0;      // 折扣，显式初始化为 0.0
+};
+
+Sales_data::Sales_data(const std::string &book, const unsigned num,
+                    const double sellp, const double salep)
+{
+    bookNo = book;
+    units_sold = num;
+    sellingprice = sellp;
+    saleprice = salep;
+    if(sellingprice != 0)
+        discount = saleprice / sellingprice; // 计算实际折扣
+}
+
+Sales_data::Sales_data(std::istream &is)
+{
+    is >> *this;
+}
+
+/* 在类的定义中，我们设计了 4 个构造函数。
+第一个构造函数是默认构造函数，它使用了 C++11 新标准提供的 =default。它的参数列表为空，即不需要我们提供任何数据也能构造一个对象。
+
+第二个构造函数只接受一个 const string&，表示书籍的 ISBN编号，编译器赋予其他数据成员类内初始值。
+
+第三个构造函数接受完整的销售记录信息，const string& 表示书籍的 ISBN 编号，
+const unsigned 表示销售量，后面两个 const double 分别表示书籍的原价和实际售价。
+
+最后一个构造函数接受 istream& 并从中读取书籍的销售信息。*/
+
+int main()
+{
+    Sales_data data1;
+    Sales_data data2("978-7-121-15535-2");
+    Sales_data data3("978-7-121-15535-2", 100, 128, 109);
+    Sales_data data4(cin);
+
+    cout << "The books' sales status is: " << endl;
+
+    cout << data1 << "\n" << data2 << "\n" << data3 << "\n" << data4 << "\n";
+    return 0;
+}
+```
+
+**练习7.12：把只接受一个 istream 作为参数的构造函数定义移到类的内部。**
+
+```cpp
+/* 练习7.12：把只接受一个 istream 作为参数的构造函数定义移到类的内部。
+
+【出题思路】构造函数既可以定义在类的外部，也可以定义在类的内部。*/
+
+#include <iostream>
+using namespace std;
+
+class Sales_data
+{
+public:                         // 构造函数的 4 种形式
+    Sales_data() = default;
+    Sales_data(const std::string &book) : bookNo(book) { }
+    Sales_data(const std::string &book, const unsigned num,
+               const double sellp, const double salep);
+    Sales_data(std::istream &is) { is >> *this; }
+public:
+    std::string bookNo;         // 书籍编号，隐式初始化为空串
+    unsigned units_sold = 0;    // 销售量，显式初始化为 0
+    double sellingprice = 0.0;  // 原始价格，显式初始化为 0.0
+    double saleprice = 0.0;     // 实售价格，显式初始化为 0.0
+    double discount = 0.0;      // 折扣，显式初始化为 0.0
+};
+```
+
+**练习7.15：为你的 Person 类添加正确的构造函数。**
+
+**练习7.22：修改你的 Person 类使其隐藏实现的细节。**
+
+```cpp
+/* 练习7.15：为你的 Person 类添加正确的构造函数。
+   练习7.22：修改你的 Person 类使其隐藏实现的细节。
+
+【出题思路】仿照 Sales_data 类，为 Person 类添加默认构造函数、
+接受两个实参的构造函数和从标准输入流中读取数据的构造函数。
+
+隐藏细节的含义是指把 Person 类的数据成员以及不应该被外部访问的函数成员设置成 private。*/
+
+class Person
+{
+private:
+    string strName;
+    string strAddress;
+public:
+    Person() = default;
+    Person(const string &name, const string &add)
+    {
+        strName = name;
+        strAddress = add;
+    }
+Person(std::istream &is) { is >> *this; }
+public:
+    string getName() const { return strName; }          // 返回姓名
+    string getAddress() const { return strAddress; }    // 返回地址
+};
+```
+
+**练习7.13：原来的程序使用 Sales_data类的默认构造函数，本题改为使用接受 istream的构造函数。**
+
+```cpp
+/*练习7.13：使用 istream 构造函数重写第 229 页的程序。
+
+【出题思路】原来的程序使用 Sales_data类的默认构造函数，本题改为使用接受 istream 的构造函数。*/
+
+// p229 程序：
+Sales_data total;                   // 保存当前求和结果的变量
+if (read(cin, total)) {             // 读入第一笔交易
+    Sales_data trans;               // 保存下一条交易数据的变量
+    while(read(cin, trans)) {       // 读入剩余的交易
+        if (total.isbn() == trans.isbn())   // 检查 isbn
+            total.combine(trans);   // 更新变量 total 当前的值
+        else {
+            print(cout, total) << endl; // 输出结果
+            total = trans;          // 把trans赋给total，处理下一本书
+        }
+    }
+    print(cout, total) << endl;     // 输出最后一条交易
+} else {                            // 没有输入任何信息
+    cerr << "No data?!" << endl;    // 通知用户
+}
+
+// 改写后的程序
+
+#include <iostream>
+#include "Sales_data.h"
+using namespace std;
+
+int main()
+{
+    Sales_data total(cin);                      // 保存当前求和结果的变量
+    if (cin)
+    {                                           // 读入第一笔交易
+        Sales_data trans(cin);                  // 保存下一条交易数据的变量
+        do
+        {                                       // 读入剩余的交易
+            if (total.isbn() == trans.isbn())   // 检查 isbn
+                total.combine(trans);           // 更新变量 total 当前的值
+            else
+            {
+                print(cout, total) << endl;     // 输出结果
+                total = trans;                  // 处理下一本书
+            }
+        } while (read(cin, trans));
+        print(cout, total) << endl;             // 输出最后一条交易
+    }
+    else
+    {                                           // 没有输入任何信息
+        cerr << "No data?!" << endl;            // 通知用户
+    }
+    return 0;
+}
+```
 
 ### 7.1.5 拷贝、赋值和析构
 
+除了定义类的对象如何初始化之外，类还需要控制拷贝、赋值和销毁对象时发生的行为。
+当对象不再存在时执行销毁的操作，比如一个局部对象会在创建它的块结束时被销毁，当`vector`对象（或者`数组`）销毁时存储在其中的对象也会被销毁。
+
+#### 某些类不能依赖于合成的版本
+
+尽管编译器能替我们合成拷贝、赋值和销毁的操作，但是必须要清楚的一点是，对于某些类来说合成的版本无法正常工作。特别是，当类需要分配类对象之外的资源时，合成的版本常常会失效。
+
+不过值得注意的是，很多需要动态内存的类能（而且应该）使用`vector`对象或者`string`对象管理必要的存储空间。使用`vector`或者`string`的类能避免分配和释放内存带来的复杂性。
+
 ## 7.2 访问控制与封装
+
+在类的定义中，可以包含`0`个或者多个访问说明符，并且对于某个访问说明符能出现多少次以及能出现在哪里都没有严格规定。
+
+- 定义在`public`说明符之后的成员在整个程序内可被访问，`public`成员定义类的借口。
+  - 作为接口的一部分，**构造函数**和部分**成员函数**(即`isbn`和`combine`)紧跟在`public`说明符之后；
+  
+- 定义在`private`说明符之后的成员可以被类的成员函数访问，但是不能被使用该类的代码访问，`private`部分封装了（即隐藏了）类的实现细节。
+  - **数据成员**和作为实现部分的函数则跟在`private`说明符后面。
+
+```cpp
+class Sales_data {
+public:
+    Sales_data() = default;
+    Sales_data(const std::string &s, unsigned n, double p) :
+                bookNo(s), units_sold(n), revenue(p*n) { }
+    Sales_data(const std::string &s) : bookNo(s) { }
+    Sales_data(std::istream&);
+    std::string isbn() const { return bookNo; }
+    Sales_data &combine(const Sales_data&);
+private:
+    double avg_price() const
+        { return units_sold ? revenue/units_sold : 0; }
+    std::string bookNo;
+    unsigned units_sold = 0;
+    double revenue = 0.0;
+}
+```
+
+### 使用`class`或`struct`关键字
+
+唯一的区别是，`struct`和`class`的默认访问权限不太一样。
+类可以在它的第一个访问说明符之前定义成员，对这种成员的访问权限依赖于类定义的方式。
+
+- 如果使用`struct`关键字，则定义在第一个访问说明符之前的成员是`public`的；
+- 相反，如果使用`class`关键字，则这些成员是`private`的。
+
+**关键概念：封装的益处：**
+
+封装是指保护类的成员不被随意访问的能力。通过把类的实现细节设置为`private`，我们就能完成类的封装。封装实现了类的接口和实现的分离。
+
+如书中所述，封装有两个重要的优点：
+一是确保用户代码不会无意间破坏封装对象的状态；
+二是被封装的类的具体实现细节可以随时改变，而无须调整用户级别的代码。
+
+一旦把数据成员定义成`private`的，类的作者就可以比较自由地修改数据了。当实现部分发生改变时，只需要检查类的代码本身以确认这次改变有什么影响；换句话说，只要类的接口不变，用户代码就无须改变。
+如果数据是`public`的，则所有使用了原来数据成员的代码都可能失效，这时我们必须定位并重写所有依赖于老版本实现的代码，之后才能重新使用该程序。
+
+把数据成员的访问权限设成`private`还有另外一个好处，这么做能防止由于用户的原因造成数据被破坏。如果我们发现有程序缺陷破坏了对象的状态，则可以在有限的范围内定位缺陷：因为只有实现部分的代码可能产生这样的错误。因此，将错误的搜索限制在有限范围内将能极大地简化更改问题及修正程序等工作。
 
 ### 7.2.1 友元
 
+类可以允许其他类或者函数访问它的非公有成员，方法是令其他类或者函数成为它的**友元**(friend)。
+如果类想把一个函数作为它的友元，只需要增加一条以`friend`关键字开始的函数声明语句即可：
+
+```cpp
+class Sales data {
+    // 为 Sales_data 的非成员函数所做的友元声明
+    friend Sales_data add(const Sales_data&, const Sales_data&);
+    friend std::istream &read(std::istream&, Sales_data&);
+    friend std::ostream &print(std::ostream&, const Sales_data&);
+    // 其他成员及访问说明符与之前一致
+    public:
+        Sales_data() = default;
+        Sales_data(const std::string &s, unsigned n, double p) :
+                    bookNo(s), units_sold(n), revenue(p*n) { }
+        Sales_data(const std::string &s) : bookNo(s) { }
+        Sales_data(std::istream&);
+        std::string isbn() const { return bookNo; }
+        Sales_data &combine(const Sales_data&);
+    private:
+        std::string bookNo;
+        unsigned units_sold = 0;
+        double revenue = 0.0;
+};
+// Sales_data 接口的非成员组成部分的声明
+Sales_data add(const Sales_data&, const Sales_data&);
+std::istream &read(std::istream&, Sales_data&);
+std::ostream &print(std::ostream&, const Sales_data&);
+```
+
+**练习7.20：友元在什么时候有用？请分别列举出使用友元的利弊。**
+
+友元为类的非成员接口函数提供了访问其私有成员的能力，这种能力的提升利弊共存。
+当非成员函数确实需要访问类的私有成员时，我们可以把它声明成该类的友元。
+
+- 此时，友元可以“工作在类的内部”，像类的成员一样访问类的所有数据和函数。
+- 但是一旦使用不慎（比如随意设定友元），就有可能破坏类的封装性。
+
+#### 友元的声明
+
+友元的声明仅仅指定了访问的权限，而非一个通常意义上的函数声明。
+如果我们希望类的用户能够调用某个友元函数，那么我们就必须在友元声明之外再专门对函数进行一次声明。
+
+为了使友元对类的用户课件，我们通常把友元的声明与类本身放置在同一个头文件中（类的外部）。
+因此，我们的`Sales_data`头文件应为`read`、`print`和`add`提供独立的声明（除了类内部的友元声明之外）。
+
 ## 7.3 类的其他特性
+
+本节讨论：类型成员、类的成员的类内初始值、可变数据成员、内联成员函数、从成员函数返回`*this`、关于如何定义并使用类类型及友元类的更多知识
 
 ### 7.3.1 类成员再探
 
-### 7.3.2 返回*this的成员函数
+**练习7.23：编写你自己的 Screen 类。**
+
+```cpp
+/*练习7.23：编写你自己的 Screen 类。
+
+【思路】对于 Screen 类来说，必不可少的数据成员有：
+屏幕的宽度和高度、屏幕点内容以及光标的当前位置。
+因此仅包含数据成员的 Screen类是：*/
+
+class Screen
+{
+private:
+    unsigned height = 0, width = 0;
+    unsigned cursor = 0;
+    string contents;
+}
+```
+
+#### 定义一个类型成员
+
+`Screen`表示显示器中的一个窗口。
+每个`Screen`包含了一个用于保存`Screen`内容的`string`成员和三个`string::size_type`类型的成员，它们分别表示光标的位置以及屏幕的高和宽。
+
+```cpp
+class Screen {
+public:
+    typedef std::string::size_type pos;
+private:
+    pos cursor = 0;
+    pos height = 0, width = 0;
+    std::string contents;
+}
+```
+
+关于`pos`的声明有两点需要注意：
+
+首先，我们使用了`typedef`，也可以等价地使用类型别名：
+
+```cpp
+class Screen {
+public:
+    // 使用类型别名等价地声明一个类型名字
+    using pos = std::string::size_type;
+    // 其他成员与之前的版本一致
+};
+```
+
+其次，用来定义类型的成员必须先定义后使用。因此，类型成员通常出现在类开始的地方。
+
+#### `Screen`类的成员函数
+
+添加一个构造函数令用户能够定义屏幕的尺寸和内容，以及其他两个成员，分别负责移动光标和读取给定位置的字符：
+
+```cpp
+class Screen {
+public:
+    typedef std::string::size_type pos;
+    Screen() = default; // 因为 Screen 有另一个构造函数，所以本函数是必须的
+    Screen(pos ht, pos wd, char c) : height(ht), width(wd), contents(ht * wd, c) { }          // cursor 被其类内初始值初始化为 0
+    char get() const                        // 读取光标处的字符
+        { return contents[cursor]; }        // 隐式内联
+    inline char get(pos ht, pos wd) const;  // 显式内联
+    Screen &move(pos r, pos c);             // 能在之后被设为内联
+private:
+    pos cursor = 0;
+    pos height = 0, width = 0;
+    std::string contents;
+};
+```
+
+因为我们已经提供了一个构造函数，所以编译器将不会自动生成默认的构造函数。
+如果我们的类需要默认构造函数，必须显式地把它声明出来。
+在此例中，我们使用 `=default` 告诉编译器为我们合成默认的构造函数。
+
+第二个构造函数（接受三个参数）为`cursor`成员隐式地使用了类内初始值。
+
+**练习7.24：给你的Screen类添加三个构造函数。**
+
+```cpp
+/* 练习7.24：给你的Screen类添加三个构造函数：
+一个默认构造函数；
+另一个构造函数接受宽和高的值，然后将宽和高的值以及一个字符 contents 初始化成给定数量的空白；
+第三个构造函数接受该字符作为初始化之后屏幕的内容。
+
+【出题思路】同一个类可以包含多个构造函数，构造函数的定义可以再类的内部也可以在类的外部。*/
+
+class Screen
+{
+private:
+    unsigned height = 0, width = 0;
+    unsigned cursor = 0;
+    string contents;
+public:
+    Screen() = default;     // 默认构造函数
+    Screen(unsigned ht, unsigned wd) : height(ht), width(wd), contents(ht * wd, ' ') { }
+    Screen(unsigned ht, unsigned wd, char c)
+        : height(ht), width(wd), contents(ht * wd, c) { }
+};
+```
+
+#### 令成员作为内联函数
+
+我们可以再类的内部把`inline`作为声明的一部分显式地声明成员函数，
+同样的，也能在类的外部用`inline`关键字修饰函数的定义：
+
+```cpp
+// 在外部：
+inline                                  // 可以、在再函数的定义出指定 inline
+Screen &Screen::move(pos r, pos c)
+{
+    pos row = r * width;                // 计算行的位置
+    cursor = row + c;                   // 在行内将光标移动到指定的列
+    return *this;                       // 以左值的形式返回对象
+}
+// 在内部：
+char Screen::get(pos r, pos c) const    // 在类的内部声明成 inline
+{
+    pos row = r * width;                // 计算行的位置
+    return contents[row + c];           // 返回给定列的字符
+}
+```
+
+虽然我们无须在声明和定义的地方同时说明`inline`，但是这么做其实是合法的。
+不过最好只在类外部定义的地方说明`inline`，这样可以使类更容易理解。
+
+**练习7.26：将 Sales_data::avg_price 定义成内联函数（两种途径）。**
+
+```cpp
+/* 练习7.26：将 Sales_data::avg_price 定义成内联函数。
+【出题思路】
+要想把类的成员函数定义成内联函数，有几种不同的途径。
+第一种是直接把函数定义放在类的内部，
+第二种是把函数定义放在类的外部，并且在定义之前显式地指定 inline。*/
+
+// 隐式内联，把 avg_price 函数的定义放在类的内部：
+class Sales_data
+{
+    public:
+    double avg_price() const
+    {
+        if (units_sold)
+            return revenue / units_sold;
+        else
+            return 0;
+    }
+};
+
+// 显示内联，把 avg_price 函数的定义放在类的外部，并且指定 inline：
+class Sales_data
+{
+    double avg_price() const;
+}
+inline double Sales_data:: avg_price() const
+{
+    if (units_sold)
+        return revenue / units_sold;
+    else
+        return 0;
+}
+```
+
+#### 重载成员函数
+
+和非成员函数一样，成员函数也可以被重载，只要函数之间在参数的数量和/或类型上有所区别就行。
+
+两个版本的`get`函数，一个版本返回光标当前位置的字符；
+另一个版本返回由行号和列号确定的位置的字符。
+编译器根据实参的数量来决定运行哪个版本的函数：
+
+```cpp
+Screen myscreen;
+char ch = myscreen.get();   // 调用 Screen::get()
+ch = myscreen.get(0, 0);    // 调用 Screen::get(pos, pos)
+```
+
+#### 可变数据成员
+
+有时我们希望能修改类的某个数据成员，即便是在一个`const`成员函数内。
+可以通过在变量的声明中加入`mutable`关键字做到这一点。
+
+一个**可变数据成员**(mutable data member)永远不会是`const`，即便它是`const`对象的成员。因此，一个`const`成员函数可以改变一个可变成员的值。
+
+举例：我们将给`Screen`添加一个名为`access_ctr`的可变成员，通过它我们可以追踪每个`Screen`的成员函数被调用了多少次：
+
+```cpp
+class Screen {
+public:
+    void some_member() const;
+private:
+    mutable size_t access_ctr;  // 即使在一个 const 对象内也能被修改
+    // 其他成员与之前的版本一致
+};
+
+void Screen::some_member() const
+{
+    ++access_ctr;       // 保存一个计数值，用于记录成员函数被调用的次数
+    // 该成员需要完成的其他工作
+}
+```
+
+#### 类数据成员的初始值
+
+我们希望 `Window_mgr`类开始时总是拥有一个默认初始化的`Screen`。
+最好的方式就是把这个默认值声明称一个类内初始值：
+
+```cpp
+class Window_mgr {
+private:
+    // 这个 Window_mgr 追踪的 Screen
+    // 默认情况下，一个 Window_mgr 包含一个标准尺寸的空白 Screen
+    std::vector<Screen> screens {Screen(24, 80, ' ')};
+};
+```
+
+`Screen`的构造函数接受两个尺寸参数和一个字符值，创建了一个给定大小的空白屏幕对象。
+类内初始值必须使用`=`的初始化形式（初始化`Screen`的数据成员时所用的）或者
+花括号括起来的直接初始化形式（初始化`screens`所用的）。
+
+Note: 当我们提供一个类内初始值时，必须以符号`=`或者花括号表示。
+
+### 7.3.2 返回`*this`的成员函数
+
+```cpp
+class Screen {
+public:
+    Screen &set(char);
+    Screen &set(pos, pos, char);
+    // 其他成员和之前的版本一致
+};
+
+inline Screen &Screen::set(char c)
+{
+    contents[cursor] = c;           // 设置当前光标所在位置的新值
+    return *this;                   // 将 this 对象作为左值返回
+}
+
+inline Screen &Screen::set(pos r, pos col, char ch)
+{
+    contents[r*width + col] = ch;   // 设置给定位置的新值
+    return *this;                   // 将 this 对象作为左值返回
+}
+```
+
+`set`成员的返回值是调用`set`的对象的引用，返回引用的函数是左值的，意味着这些函数返回的是对象本身而非对象的副本。
+
+如果我们把一系列这样干的操作连接在一条表达式中的话，这些操作将在同一个对象上执行。
+
+```cpp
+myScreen.move(4,0).set('#');
+```
+
+上面的表达式中，我们首先移动`myScreen`内的光标，然后设置`myScreen`的`contents`成员。也就是说，上述语句等价于
+
+```cpp
+myScreen.move(4,0);
+myScreen.set('#');
+```
+
+我们令`move`和`set`返回`Screen`而非`Screen&`，则上述语句的行为将大不相同。
+`move`的返回值将是`*this`的副本，因此调用`set`只能改变临时副本，而不能改变`myScreen`的值。
+
+```cpp
+// 如果 move 返回 Screen 而非 Screen&
+Screen temp = myScreen.move(4,0);   // 对返回值进行拷贝
+temp.set('#');                      // 不会改变 myScreen 的 contents
+```
+
+#### 从`const`成员函数返回`*this`
+
+Note: 一个`const`成员函数如果以引用形式返回`*this`，那么它的返回类型将是常量引用。
+
+举例：添加一个名为`display`的操作，负责打印`Screen`的内容。
+从逻辑上来说，显示一个`Screen`并不需要改变它的内容，因此我们令`display`为一个`const`成员，此时,`this`将是一个指向`const`的指针，而`*this`是`const`对象。
+由此推断，`display`的返回类型应该是`const Sales_data&`。
+
+然而，如果真的令`display`返回一个`const`引用，我们将不能把`display`嵌入到一组动作的序列中去。
+
+```cpp
+Screen myScreen;
+// 如果 display 返回常量引用，则调用 set 将引发错误
+myScreen.display(cout).set('*');
+```
+
+即使 `myScreen` 是个非常量，对 `set` 的调用也无法通过编译。
+`display` 的 `const` 版本返回的是常量引用，而我们显然无权 `set` 一个常量对象。
+
+#### 基于`const`的重载
+
+我们只能在一个常量对象上调用 const 成员函数。
+
+```cpp
+class Screen {
+public:
+    // 根据对象是否是 const 重载了 display 函数
+    Screen &display(std::ostream &os)
+                    { do_display(os); return *this; }
+    const Screen &display(std::ostream &os) const
+                    { do_display(os); return *this; }
+private:
+    // 该函数负责显示 Screen 的内容
+    void do_display(std::ostream &os) const { os << contents; }
+    // 其他成员与之前的版本一致
+};
+```
+
+和之前所学的一样，当一个成员调用另外一个成员时，`this` 指针在其中隐式地传递。
+因此，当 `display` 调用 `do_display` 时，它的 `this` 指针隐式地传递给 `do_display`。
+而当 `display` 的非常量版本调用 `do_display` 时，它的 `this` 指针将隐式地从指向非常量的指针转换成指向常量的指针。
 
 ### 7.3.3 类类型
 
+```cpp
+struct First {
+    int memi;
+    int getMem();
+};
+
+struct Second {
+    int memi;
+    int getMem();
+};
+First obj1;
+Second obj2 = obj1;
+```
+
+**Note：**即使两个类的成员列表完全一致，它们也是不同的类型。对于一个来说，它的成员和其他任何类（或者任何其他作用域）的成员都不是一回事儿。
+
+我们可以把类名作为类型的名字使用，从而直接指向类类型。
+或者，我们也可以把类名在关键字 class 或 struct 后面：
+
+```cpp
+Sales_data item1;       // 默认初始化 Sales_data 类型的对象
+class Sales_data item1; // 一条等价的声明
+```
+
+#### 类的声明
+
+```cpp
+class Screen;       // Screen 类的声明
+```
+
+这种声明被称为**前向声明**(forward declaration)。
+对于类型`Screen`来说，在它声明之后定义之前是一个**不完全类型**(incomplete type)，也就是说，此时我们已知`Screen`是一个类类型，但是不清楚它到底包含哪些成员。
+
+在创建类的对象之前，该类必须被定义过，而不能仅仅被声明。否则，编译器就无法了解这样的对象需要多少存储空间。
+
+类也必须首先被定义，然后才能用引用或者指针访问其成员。毕竟如果类尚未定义，编译器也就不清楚该类到底有哪些成员。
+
+然而，一旦一个类的名字出现后，它就被认为是声明过了（但尚未定义），因此类允许包含指向它自身类型的引用或指针：
+
+```cpp
+class Link_screen {
+    Screen window;
+    Link_screen *next;
+    Link_screen *prev;
+};
+```
+
+**练习7.31：定义一对类 X 和 Y，其中 X 包含一个指向 Y 的指针，而 Y 包含一个类型为 X 的对象。**
+
+```cpp
+/* 练习7.31：定义一对类 X 和 Y，其中 X 包含一个指向 Y 的指针，而 Y 包含一个类型为 X 的对象。
+
+【出题思路】理解类的声明和定义。
+声明的作用是告知程序类的名字合法可用；定义的作用是规定类的细节。*/
+
+class X;    // 声明类型 X
+class Y     // 定义类型 Y
+{
+    X* x;   // X 有一个指向 Y 的指针
+};
+
+class X     // 定义类型 X
+{
+    Y y;    // Y 包含一个类型为 X 的对象
+};
+
+/* 类 X 的声明称为前向声明，它向程序中引入了名字 X 并且指明 X 是一种类类型。
+对于类型 X 来说，此时我们己知它是一个类类型，但是不清楚它到底包含哪些成员， 所以它是一个不完全类型。
+我们可以定义指向不完全类型的指针，但是无法创建不完全类型的对象。*/
+
+// 如果试图写成下面的形式，将引发编译错误。
+
+class Y;
+class X
+{
+    Y y;
+};
+
+class Y
+{
+    X* x;
+};
+
+// 此时我们试图在类 X 中创建不完全类型 Y 的对象，编译器给出报错信息：
+// error: filed 'y' has incomplete type
+```
+
 ### 7.3.4 友元再探
+
+类还可以把其他的类定义成友元，也可以把其他鳄梨（之前已定义过的）成员函数定义成友元。
+此外，友元函数能定义在类的内部，这样的函数是隐式内联的。
+
+#### 类之间的友元关系
+
+举例：假设我们需要为 `Window_mgr` 添加一个名为 `clear` 的成员，它负责把一个指定的 `Screen`的内容都设为空白。为了完成这一任务，`clear` 需要访问 `Screen` 的私有成员；而要想令这种访问合法，`Screen` 需要把 `Window_mgr` 指定成它的友元：
+
+```cpp
+class Screen {
+    // Window_mgr 的成员可以访问 Screen 类的私有部分
+    friend class Window_mgr;
+    // Screen 类的剩余部分
+}
+```
+
+如果一个类指定了友元类，则友元类的成员函数可以访问此类包括非公有成员在内的所有成员。
+（`Screen` 把 `Window_mgr` 指定成它的友元，则 `Window_mgr` 的成员函数可以访问 `Screen` 的包括非公有成员在内的所有成员。）
+
+```cpp
+class Window_mgr {
+public:
+    // 窗口中每个屏幕的编号
+    using ScreenIndex = std::vector<Screen>::size_type;
+    // 按照编号将指定的 Screen 重置为空白
+    void clear(ScreenIndex);
+private:
+    std::vector<Screen> screens{Screen(24, 80, ' ')};
+};
+
+void Window_mgr::clear(ScreenIndex i)
+{
+    // s 是一个 Screen 的引用，指向我们想清空的那个屏幕
+    Screen &s = screens[i];
+    // 将那个选定的 Screen 充值为空白
+    s.contents = string(s.height * s.width, ' ');
+}
+```
+
+一开始，首先`s`定义成`screens vector`中的第`i`个位置上的`Screen`的引用，随后利用`Screen`的`height`和`width`成员计算出一个新的`string`对象，并令其含有若干个空白字符，最后我们把这个含有很多空白的字符串赋给`contents`的成员。
+
+如果`clear`不是`Screen`的友元，上面的代码将无法通过编译，因为此时`clear`将不能访问`Screen`的`height`、`width`和`contents`成员。
+
+#### 令成员函数作为友元
+
+除了令整个`Window_mgr`作为友元之外，`Screen`还可以只为`clear`提供访问权限。
+当把一个成员函数声明成友元时，我们必须明确指出该成员函数属于哪个类：
+
+```cpp
+class Screen {
+    // Window_mgr::clear必须在Screen类之前被声明
+    friend void Window_mgr::clear(ScreenIndex);
+    // Screen类的剩余部分
+};
+```
+
+#### 函数重载和友元
+
+```cpp
+// 重载的 storeOn 函数
+extern std::ostream& storeOn(std::ostream &, Screen &);
+extern BitMap& sotreOn(BitMap &, Screen &);
+class Screen {
+    // storeOn ostream 版本能访问 Screen 对象的私有部分
+    friend std::ostream& storeOn(std::ostream &, Screen &);
+    // ...
+};
+```
+
+尽管重载函数的名字相同的，但它们仍然是不同的函数。因此，如果一个类想把一组重载函数声明成它的友元，它需要对这组函数中的每一个分别声明。
+
+`Screen`类把接受`ostream&`的`storeOn`函数声明成它的友元，但是接受`BitMap&`作为参数的版本仍然不能访问`Screen`。
+
+#### 友元声明和作用域
+
+就算在类的内部定义该函数，我们也必须在类的外部提供相应的声明从而使得函数可见。
+换句话说，即使我们仅仅是用声明友元的类的成员调用友元函数，它也必须是被声明过的：
+
+```cpp
+struct X {
+    friend void f() { /* 友元函数可以定义在类的内部 */ }
+    x() { f(); }            // 错误：f 还没有被声明
+    void g();
+    void h();
+};
+void X::g() { return f(); } // 错误：f 还没有被声明
+void f();                   // 声明那个定义在 X 中的函数
+void X::h() { return f(); } // 正确：现在 f 的声明在作用域中了
+```
+
+**练习7.32：定义你自己的 Screen 和 Window_mgr，其中 clear 是 Window_mgr 的成员，是 Screen 的友元。**
+
+```cpp
+/* 练习7.32：定义你自己的 Screen 和 Window_mgr，其中 clear 是 Window_mgr 的成员，是 Screen 的友元。
+
+【出题思路】类可以把其他类定义成友元，也可以把其他类的成员函数定义成友元。
+当把成员函数定义成友元时，要特别注意程序的组织结构。
+
+1. 我们必须首先定义 Window_mgr 类，其中声明 clear 函数，但是不能定义它；
+2. 接下来定义 Screen 类，并且在其中指明 clear 函数；
+3. 最后定义 clear 函数。*/
+
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Window_mgr        // 1. 我们必须首先定义 Window_mgr 类，其中声明 clear 函数，但是不能定义它；
+{
+public:
+    void clear();
+};
+
+class Screen            // 2. 接下来定义 Screen 类，并且在其中指明 clear 函数；
+{
+friend void Window_mgr::clear();
+private:
+    unsigned height = 0, width = 0;
+    unsigned cursor = 0;
+    string contents;
+public:
+    Screen() = default;
+    Screen(unsigned ht, unsigned wd, char c)
+        : height(ht), width(wd), contents(ht * wd, c) { }
+};
+
+void Window_mgr::clear()    // 3. 最后定义 clear 函数。
+{
+    Screen myScreen(10, 20, 'X');
+    cout << "Before clear, the contenst are: " << endl;
+    cout << myScreen.contents << endl;
+    myScreen.contents = "";
+    cout << "After clear, the contenst are: " << endl;
+    cout << myScreen.contents << endl;
+}
+
+int main()
+{
+    Window_mgr w;
+    w.clear();
+    return 0;
+}
+
+/*Output:
+Before clear, the contenst are:                                                                                                               XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+After clear, the contenst are:
+
+*/
+```
 
 ## 7.4 类的作用域
 
+在类的作用域之外，普通的数据和函数成员只能由对象、引用或者指针使用成员访问运算符来访问。
+对于类类型成员则使用作用域运算符访问。
+
+```cpp
+Screen::pos ht = 24, wd = 80;   // 使用 Screen 定义 的 pos 类型
+Screen scr(ht, wd, ' ');
+Screen *p = &scr;
+char c = scr.get();             // 访问 scr 对象的 get 成员
+c = p->get();                   // 访问 p 所指对象的 get 成员
+```
+
+### 作用域和定义在类外部的成员
+
+举例：回顾`Window_mgr`类的`clear`成员，该函数的参数用到了`Window_mgr`类定义的一种类型：
+`ScreenIndex`正位于`Window_mgr`类的作用域中，所以不必再专门说明`ScreenIndex`是`Window_mgr`类定义的。
+出于同样的原因，编译器也能知道函数体重用到的`screens`也是在`Window_mgr`类中定义的。
+
+```cpp
+void Window_mgr::clear(ScreenIndex i)
+{
+    Screen &s = screens[i];
+    s.contents = string(s.height * s.width, ' ');
+}
+```
+
+函数的返回类型通常出现在函数名之前。因此当成员函数定义在类的外部时，返回类型中使用的名字都位于类的作用域之外。这时，返回类型必须指明它是哪个类的成员。
+
+举例：向`Window_mgr`类添加一个新的名为`addScreen`的函数，它负责向显示器添加一个新的屏幕。这个成员的返回类型将是`ScreenIndex`，用户可以通过它定位到指定的`Screen`：
+
+```cpp
+class Window_mgr {
+public:
+    // 向窗口添加一个 Screen，返回它的编号
+    ScreenIndex addScreen(const Screen&);
+    // 其他成员与之前的版本一致
+};
+
+// 首先处理返回类型，我们必须明确指定哪个类定义了它，之后我们才进入Window_mgr的作用域
+Window_mgr::ScreenIndex
+Window_mgr::addScreen(const Screen &s)
+{
+    screens.push_back(s);
+    return screens.size() - 1;
+}
+```
+
+**练习7.33：如果我们给 Screen 添加一个如下所示的 size 成员将发生什么情况？**
+
+```cpp
+/* 练习7.33：如果我们给 Screen 添加一个如下所示的 size 成员将发生什么情况？
+如果出现了问题，请尝试修改它。*/
+
+pos Screen::size() const
+{
+    return height * width;
+}
+
+/* 【出题思路】如果添加入题目所示的 size 函数将会出现编译错误。
+因为该函数的返回类型 pos 本身定义在 Screen 类的内部，所以在类的外部无法直接使用 pos。
+要想使用 pos，需要在它的前面加上作用域 Screen::。
+修改后的程序是：*/
+Screen::pos Screen::size() const
+{
+    return height * width;
+}
+```
+
 ### 7.4.1 名字查找与类的作用域
+
+名字查找(name lookup)：寻找与所用名字最匹配的声明的过程。
+
+#### 用于类成员声明的名字查找
+
+```cpp
+typedef double Money;
+string bal;
+class Account {
+public:
+    Money balance() { return bal; }
+private:
+    Money bal;
+    // ...
+}
+```
+
+当编译器看到`balance`函数的声明语句时，将在`Account`类的范围内寻找对`Money`的声明。没找到匹配的成员，会接着到`Account`的外层作用域中查找。
+
+#### 类型名要特殊处理
+
+在类中，如果成员使用了外层作用域中的某个名字，而改名字代表一种类型，则类不能在之后重新定义该名字：
+
+```cpp
+typedef double Money;
+class Account {
+public:
+    Money balance() {return bal; }  // 使用外层作用域的Money
+private:
+    typedef double Money;           // 错误：不能重新定义Money
+    Money bal;
+    // ...
+}
+```
+
+#### 成员定义中的普通快作用域的名字查找
+
+成员函数中使用的名字按照如下方式解析：
+
+- 首先，在成员函数内查找该民资的声明。和前面一样，只有在函数使用之前出现的声明才被考虑。
+- 如果在成员函数内没有找到，则在类内继续查找，这时类的所有成员都可以被考虑。
+- 如果类内也没找到该名字的声明，在成员函数定义之前的作用域内继续查找。
+
+```cpp
+int height;
+class Screen {
+public:
+    typedef std::string::size_type pos;
+    void dummy_fcn(pos height) {
+        cursor = width * height;    // 哪个height？是那个参数
+        // 函数的参数位于函数作用域内，因此dummy_fcn函数体内用到的名字height指的是参数声明；类的成员被隐藏了
+    }
+private:
+    pos cursor = 0;
+    pos height = 0, width = 0;
+};
+```
+
+如果想绕开上面的查找规则，应该将代码变为：
+
+```cpp
+void Screen::dummy_fcn(pos height) {
+    cursor = width * this->height;      // 成员 height
+    // 另外一种表示该成员的方式
+    cursor = width * Screen::height;    // 成员 height
+}
+```
+
+Note：尽管类的成员被隐藏了，但我们仍然可以通过加上类的名字或显式地使用 `this` 指针来强制访问成员。
+
+其实最好地确保我们使用`height`成员的方法是给参数七个其他名字：
+
+```cpp
+// 建议的写法：不要把成员名字作为参数或其他局部变量使用
+void Screen::dummy_fcn(pos ht) {
+    cursor = width * height;        // 成员 height
+}
+```
+
+#### 类作用域之后，在外围的作用域中查找
+
+Note：尽管外层的对象被隐藏掉了，但我们仍然可以用**作用域运算符**访问它。
+
+```cpp
+// 不建议的写法：不要隐藏外层作用域中可能被用到的名字
+void Screen::dummy_fcn(pos height) {
+    cursor = width* ::height;       // 哪个 height？是那个全局的
+}
+```
+
+#### 在文件中名字的出现处对其进行解析
+
+```cpp
+int height;             // 定义了一个名字，稍后将在 Screen 中使用
+class Screen {
+public:
+    typedef std::string::size_type pos;
+    void setHeight(pos);
+    pos height = 0;     // 隐藏了外层作用域中的 height
+};
+Screen::pos verify(Screen::pos);
+void Screen::setHeight(pos var) {
+    // var: 参数
+    // height: 类的成员
+    // verify: 全局函数
+    height = verify(var);
+}
+```
+
+此例中，verify 的声明位于 `setHeight` 的定义之前，因此可以被正常使用。
+
+**练习7.35：解释下面代码的含义，说明其中的 `Type` 和 `initVal` 分别使用了哪个定义。如果代码存在错误，尝试修改它。**
+
+```cpp
+/* 练习7.35：解释下面代码的含义，说明其中的 Type 和 initVal 分别使用了哪个定义。
+如果代码存在错误，尝试修改它。
+
+【出题思路】
+理解名字查找与类的作用域的关系，包括用于类成员声明的名字查找和成员定义中的名字查找。*/
+
+typedef string Type;        // 声明类型别名 Type 表示 string
+Type initVal();             // 声明函数 initVal，返回类型是 Type
+class Exercise {            // 定义一个新类 Exercise
+public:
+    typedef double Type;    // 在内层作用域重新声明类型别名 Type 表示 double
+    Type setVal(Type);      // 声明函数 setVal，参数和返回值的类型都是 Type
+    Type initVal;           // 在内层作用域重新声明函数 initVal，返回类型是 Type
+private:
+    int val;                // 声明私有数据成员 val
+};
+                            // 定义函数 setVal，此时的 Type 显然是外层作用域的
+Type Exercise::setVal(Type parm) {
+    val = parm + initVal(); // 此处使用的是类内的 initVal 函数
+    return val;
+}
+```
+
+分析：
+其中，在 `Exercise` 类的内部，函数 `setVal` 和 `initVal` 用到的 `Type` 都是 `Exercise` 内部声明的类型别名，对应的实际类型是 `double。`
+
+在 `Exercise` 类的外部，定义 `Exercise::setVal` 函数时形参类型 `Type` 用的是 `Exercise` 内部定义的别名，对应 `double`；
+返回类型 `Type` 用的是全局作用域的别名，对应 `string`。
+使用的 `initVal` 函数是 `Exercise` 类内定义的版本。
+
+编译上述程序时在 `setVal` 的定义处发生错误，
+此处定义的函数形参类型是 `double`、返回值类型是 `string`，
+而类内声明的同名函数形参类型是 `double`、返回值类型也是 `double`，
+二者无法匹配。
+
+修改的措施是在定义 `setVal` 函数时使用作用域运算符强制指定函数的返回值类型。
+
+```cpp
+Exercise::Type Exercise::setVal(Type parm) {
+    val = parm + initVal(); // 此处使用的是类内的 initVal 函数
+    return val;
+}
+```
 
 ## 7.5 构造函数再探
 
 ### 7.5.1 构造函数初始值列表
 
+```cpp
+// (p237) 定义 `Sales_data` 的构造函数
+// 原来的版本初始化了它的数据成员
+struct Sales_data {
+    // 新增的构造函数
+    Sales_data() = default;
+    Sales_data(const std::string &s) : bookNo(s) { }
+    Sales_data(const std::string &s, unsigned n, double p) :
+               bookNo(s), units_sold(n), revenue(p*n) { }
+    Sales_data(std::istream &);
+    // 之前已有的其他成员
+    std::string isbn() const { return bookNo; }
+    Sales_data& combine(const Sales_data&);
+    double avg_price() const;
+    std::string bookNo;
+    unsigned units_sold = 0;
+    double revenue = 0.0;
+};
+```
+
+```cpp
+// 这个版本对数据成员执行了赋值操作
+// Sales_data 构造函数的一种写法，虽然合法但比较草率：没有使用构造函数初始值
+Sales_data::Sales_data(const string &s, unsigned cnt, double price)
+{
+    bookNo = s;
+    units_sold = cnt;
+    revenue = cnt * price;
+}
+```
+
+### 构造函数的初始值有时必不可少
+
+如果成员是 `const` 或者是引用的话，必须将其初始化。
+
+类似的，当成员属于某种类类型且该类没有定义默认构造函数时，也必须将这个成员初始化。
+
+```cpp
+class ConstRef {
+public:
+    ConstRef(int ii);
+private:
+    int i;
+    const int ci;
+    int &ri;
+}
+```
+
+和其他常量对象或者引用一样，成员 `ci` 和 `ri` 都必须被初始化。
+如果没有为它们提供构造函数初始值的话将引发错误：
+
+```cpp
+// 错误：ci 和 ri 必须被初始化
+ConstRef::ConstRef(int ii)
+{ // 赋值
+    i = ii;     // 正确
+    ci = ii;    // 错误：不能给 const 赋值
+    ri = i;     // 错误：ri 没被初始化
+}
+```
+
+我们初始化 `const` 或者引用类型的数据成员的唯一机会就是通过构造函数初始值，
+因此该构造函数的正确形式应该是：
+
+```cpp
+// 正确：显式地初始化引用和 const 成员
+ConstRef::ConstRef(int ii) :: i(ii), ci(ii), ri(i) { }
+```
+
+Note: 如果成员是 `const`、引用，或者属于某种未提供默认构造函数的类类型，我们必须通过构造函数初始值列表为这些成员提供初值。
+
+建议：要养成**使用构造函数初始值**的习惯，特别是遇到有的类含有需要构造函数初始值的成员时。
+
+### 成员初始化的顺序
+
+注意：最好令构造函数初始值的顺序语成员声明的顺序保持一致。
+而且如果可能的话，尽量避免使用某些成员初始化其他成员。
+
+```cpp
+//
+class X {
+    int i;
+    int j;
+public:
+    // 未定义的：i 在 j 之前被初始化
+    X(int val) : j(val), i(j) { }
+}
+```
+
+成员的初始化顺序语它们在类定义中的出现顺序一致。
+构造函数初始值列表中初始值的前后位置关系不会影响实际的初始化顺序。
+
+所以在此例中，从构造函数初始值的形式上来看仿佛是先用 `val` 初始化了 `j`，然后再用 `j` 初始化 `i`。实际上，`i` 先被初始化，因此这个初始值的效果是试图使用未定义的值 `j`初始化 `i`。
+
+最好用构造函数的参数作为成员的初始值，而尽量避免使用同一个对象的其他成员。
+这样的好处是我们可以不必考虑成员的初始化顺序。
+例如，X 的构造函数如果写成如下的形式效果会更好：
+
+```cpp
+// 在这个版本中，i 和 j 初始化的顺序没有什么影响
+X(int val) : i(val), j(val) { }
+```
+
+### 默认实参和构造函数
+
+
+
 ### 7.5.2 委托构造函数
 
 ### 7.5.3 默认构造函数的作用
 
+#### 使用默认构造函数
+
 ### 7.5.4 隐式的类类型转换
+
+#### 只允许一步类类型转换
+
+#### 类类型转换不是总有效
+
+#### 抑制构造函数定义的隐式转换
+
+#### `explicit`构造函数只能用于直接初始化
+
+#### 为转换显式地使用构造函数
+
+#### 标准库中含有显示构造函数的类
 
 ### 7.5.5 聚合类
 
 ### 7.5.6 字面值常量类
 
+#### `constexpr`构造函数
+
 ## 7.6 类的静态成员
+
+### 声明静态成员
+
+### 使用类的静态成员
+
+### 定义静态成员
+
+### 静态成员的类内初始化
+
+### 静态成员能用于某些场景，而普通成员不能
