--- a/第7章 类/第7章 类.md
+++ b/第7章 类/第7章 类.md
@@ -1,3 +1,85 @@
+<!-- TOC -->
+
+- [第7章 类](#第7章-类)
+  - [7.1 定义抽象数据类型](#71-定义抽象数据类型)
+    - [7.1.1 设计Sales_data类](#711-设计sales_data类)
+      - [使用改进的`Sales_data`类](#使用改进的sales_data类)
+    - [7.1.2 定义改进的Sales_data类](#712-定义改进的sales_data类)
+      - [定义成员函数](#定义成员函数)
+      - [引入`this`](#引入this)
+      - [引入`const`成员函数](#引入const成员函数)
+      - [类作用域和成员函数](#类作用域和成员函数)
+      - [在类的外部定义成员函数](#在类的外部定义成员函数)
+      - [定义一个返回`this`对象的函数](#定义一个返回this对象的函数)
+    - [7.1.3 定义类相关的非成员函数](#713-定义类相关的非成员函数)
+      - [定义`read`和`print`函数](#定义read和print函数)
+      - [定义`add`函数](#定义add函数)
+    - [7.1.4 构造函数 (constructor)](#714-构造函数-constructor)
+      - [合成的默认构造函数](#合成的默认构造函数)
+      - [某些类不能依赖于合成的默认构造函数](#某些类不能依赖于合成的默认构造函数)
+      - [定义`Sales_data`的构造函数](#定义sales_data的构造函数)
+      - [`=default`的含义](#default的含义)
+      - [构造函数初始值列表](#构造函数初始值列表)
+      - [在类的外部定义构造函数](#在类的外部定义构造函数)
+    - [7.1.5 拷贝、赋值和析构](#715-拷贝赋值和析构)
+      - [某些类不能依赖于合成的版本](#某些类不能依赖于合成的版本)
+  - [7.2 访问控制与封装](#72-访问控制与封装)
+    - [使用`class`或`struct`关键字](#使用class或struct关键字)
+    - [7.2.1 友元](#721-友元)
+      - [友元的声明](#友元的声明)
+  - [7.3 类的其他特性](#73-类的其他特性)
+    - [7.3.1 类成员再探](#731-类成员再探)
+      - [定义一个类型成员](#定义一个类型成员)
+      - [`Screen`类的成员函数](#screen类的成员函数)
+      - [令成员作为内联函数](#令成员作为内联函数)
+      - [重载成员函数](#重载成员函数)
+      - [可变数据成员](#可变数据成员)
+      - [类数据成员的初始值](#类数据成员的初始值)
+    - [7.3.2 返回`*this`的成员函数](#732-返回this的成员函数)
+      - [从`const`成员函数返回`*this`](#从const成员函数返回this)
+      - [基于`const`的重载](#基于const的重载)
+    - [7.3.3 类类型](#733-类类型)
+      - [类的声明](#类的声明)
+    - [7.3.4 友元再探](#734-友元再探)
+      - [类之间的友元关系](#类之间的友元关系)
+      - [令成员函数作为友元](#令成员函数作为友元)
+      - [函数重载和友元](#函数重载和友元)
+      - [友元声明和作用域](#友元声明和作用域)
+  - [7.4 类的作用域](#74-类的作用域)
+    - [作用域和定义在类外部的成员](#作用域和定义在类外部的成员)
+    - [7.4.1 名字查找与类的作用域](#741-名字查找与类的作用域)
+      - [用于类成员声明的名字查找](#用于类成员声明的名字查找)
+      - [类型名要特殊处理](#类型名要特殊处理)
+      - [成员定义中的普通快作用域的名字查找](#成员定义中的普通快作用域的名字查找)
+      - [类作用域之后，在外围的作用域中查找](#类作用域之后在外围的作用域中查找)
+      - [在文件中名字的出现处对其进行解析](#在文件中名字的出现处对其进行解析)
+  - [7.5 构造函数再探](#75-构造函数再探)
+    - [7.5.1 构造函数初始值列表](#751-构造函数初始值列表)
+      - [构造函数的初始值有时必不可少](#构造函数的初始值有时必不可少)
+      - [成员初始化的顺序](#成员初始化的顺序)
+      - [默认实参和构造函数](#默认实参和构造函数)
+    - [7.5.2 委托构造函数 (delegating constructor)](#752-委托构造函数-delegating-constructor)
+    - [7.5.3 默认构造函数的作用](#753-默认构造函数的作用)
+      - [使用默认构造函数](#使用默认构造函数)
+    - [7.5.4 隐式的类类型转换](#754-隐式的类类型转换)
+      - [只允许一步类类型转换](#只允许一步类类型转换)
+      - [类类型转换不是总有效](#类类型转换不是总有效)
+      - [抑制构造函数定义的隐式转换](#抑制构造函数定义的隐式转换)
+      - [`explicit`构造函数只能用于直接初始化](#explicit构造函数只能用于直接初始化)
+      - [为转换显式地使用构造函数](#为转换显式地使用构造函数)
+      - [标准库中含有显示构造函数的类](#标准库中含有显示构造函数的类)
+    - [7.5.5 聚合类](#755-聚合类)
+    - [7.5.6 字面值常量类](#756-字面值常量类)
+      - [`constexpr`构造函数](#constexpr构造函数)
+  - [7.6 类的静态成员](#76-类的静态成员)
+    - [声明静态成员](#声明静态成员)
+    - [使用类的静态成员](#使用类的静态成员)
+    - [定义静态成员](#定义静态成员)
+    - [静态成员的类内初始化](#静态成员的类内初始化)
+    - [静态成员能用于某些场景，而普通成员不能](#静态成员能用于某些场景而普通成员不能)
+
+<!-- /TOC -->
+
 # 第7章 类
 
 类的基本思想是**数据抽象**(data abstraction)和**封装**(encapsulation)。
@@ -832,7 +914,7 @@ private:
     unsigned height = 0, width = 0;
     unsigned cursor = 0;
     string contents;
-}
+};
 ```
 
 #### 定义一个类型成员
@@ -848,7 +930,7 @@ private:
     pos cursor = 0;
     pos height = 0, width = 0;
     std::string contents;
-}
+};
 ```
 
 关于`pos`的声明有两点需要注意：
@@ -1229,7 +1311,7 @@ class Screen {
     // Window_mgr 的成员可以访问 Screen 类的私有部分
     friend class Window_mgr;
     // Screen 类的剩余部分
-}
+};
 ```
 
 如果一个类指定了友元类，则友元类的成员函数可以访问此类包括非公有成员在内的所有成员。
@@ -1450,7 +1532,7 @@ public:
 private:
     Money bal;
     // ...
-}
+};
 ```
 
 当编译器看到`balance`函数的声明语句时，将在`Account`类的范围内寻找对`Money`的声明。没找到匹配的成员，会接着到`Account`的外层作用域中查找。
@@ -1468,7 +1550,7 @@ private:
     typedef double Money;           // 错误：不能重新定义Money
     Money bal;
     // ...
-}
+};
 ```
 
 #### 成员定义中的普通快作用域的名字查找
@@ -1629,9 +1711,72 @@ Sales_data::Sales_data(const string &s, unsigned cnt, double price)
 }
 ```
 
-### 构造函数的初始值有时必不可少
+**练习7.40：掌握创类类型的方法，理解不同构造函数的区别。**
 
-如果成员是 `const` 或者是引用的话，必须将其初始化。
+```cpp
+/*练习7.40：从下面的抽象概念中选择一个（或者你自己指定一个），思考这样的类需要哪些数据成员吗，提供一组合理的构造函数并阐明这样做的原因。
+
+(a) Book    (b) Data    (c) Employee
+(d) Vehicle (e) Object  (f) Tree
+
+【出题思路】掌握创类类型的方法，理解不同构造函数的区别。*/
+
+/*首先选择(a) Book，
+一本书通常包含书名、ISBN 编号、定价、作者、出版社等信息，
+因此令其数据成员为：Name、ISBN、Price、Author、Publisher，
+其中 Price 是 double 类型，其他都是 string 类型。
+Book 的构造函数有三个：
+一个默认构造函数、
+一个包含完整书籍信息的构造函数、
+一个接受用户输入的构造函数。
+其定义如下： */
+
+class Book
+{
+private:
+    string Name, ISBN, Author, Publisher;
+    double Price = 0;
+public:
+    Book() = default;
+    Book(const string &n, const string &I, double pr, const string &a, const string &p)
+    {
+        Name = n;
+        ISBN = I;
+        Price = pr;
+        Author = a;
+        Publisher = p;
+    }
+    Book(std::istream &is) { is >> *this; }
+};
+
+
+/*也可以选择(f) Tree，一棵树通常包含树的名称、存活年份、树高等信息，因此令其数据成员为：Name、Age、Height，
+
+其中 Name 是 string 类型，Age 是 unsigned 类型，Height 是 double 类型。
+
+假如我们不希望由用户输入 Tree 的信息，则可以去掉接受 std::istream& 形参的构造函数，只保留默认构造函数和接受全部信息的构造函数。
+
+其定义如下：*/
+
+class Tree
+{
+private:
+    string Name;
+    unsigned Age = 0;
+    double Height = 0;
+public:
+    Tree() = default;
+    /* Tree(const string &n, unsigned a, double h)
+        : Name(n), Age(a), Height(h); 错误代码 可能是typo*/
+
+    Tree(const string &n, unsigned a, double h)
+        : Name(n), Age(a), Height(h) { }
+};
+```
+
+#### 构造函数的初始值有时必不可少
+
+如果成员是 `const` 或者是`引用`的话，必须将其初始化。
 
 类似的，当成员属于某种类类型且该类没有定义默认构造函数时，也必须将这个成员初始化。
 
@@ -1643,7 +1788,7 @@ private:
     int i;
     const int ci;
     int &ri;
-}
+};
 ```
 
 和其他常量对象或者引用一样，成员 `ci` 和 `ri` 都必须被初始化。
@@ -1671,7 +1816,7 @@ Note: 如果成员是 `const`、引用，或者属于某种未提供默认构造
 
 建议：要养成**使用构造函数初始值**的习惯，特别是遇到有的类含有需要构造函数初始值的成员时。
 
-### 成员初始化的顺序
+#### 成员初始化的顺序
 
 注意：最好令构造函数初始值的顺序语成员声明的顺序保持一致。
 而且如果可能的话，尽量避免使用某些成员初始化其他成员。
@@ -1684,7 +1829,7 @@ class X {
 public:
     // 未定义的：i 在 j 之前被初始化
     X(int val) : j(val), i(j) { }
-}
+};
 ```
 
 成员的初始化顺序语它们在类定义中的出现顺序一致。
@@ -1701,29 +1846,423 @@ public:
 X(int val) : i(val), j(val) { }
 ```
 
-### 默认实参和构造函数
+**练习7.36：下面的初始值是错误的，请找出问题所在并尝试修改它。**
+
+```cpp
+/* 练习7.36：下面的初始值是错误的，请找出问题所在并尝试修改它。*/
+
+struct X {
+    X (int i, int j) : base(i), rem(base % j) { }
+    int rem, base;
+};
+
+/*【出题思路】使用狗仔函数初始值列表时成员的初始化顺序，初始化顺序只与数据成员在类中出现的次序有关，而与初始值列表的顺序无关。
+
+在类 X 中，两个数据成员出现的顺序是 rem 在前，base 在后，所以当执行 X 对象的初始化操作时先初始化 rem。
+
+如上述代码所示，初始化 rem 要用到 base 的值，而此时 base 尚未被初始化，因此会出现错误。
+
+该过程与构造函数初始值列表中谁出现在前面谁出现在后面没有任何关系。
+*/
 
 
+// 修改的方法很简单，只需要把变量 rem 和 base 的次序调换即可，形式是：
+struct X {
+    X (int i, int j) : base(i), rem(base % j) { }
+    int base, rem;
+};
+```
 
-### 7.5.2 委托构造函数
+#### 默认实参和构造函数
+
+```cpp
+class Sales_data {
+public:
+    // 定义默认构造函数，令其与只接受一个string的实参的构造函数功能相同
+    Sales_data(std::string s = "") : bookNo(s) { }
+    // 其他构造函数与之前一致
+    Sales_data(std::string s, unsigned cnt, double rev) :
+        bookNo(s), units_sold(cnt), revenue(rev * cnt) { }
+    Sales_data(std::istream &is) { read (is, *this); }
+};
+```
+
+Note: 如果一个构造函数为所有参数都提供了默认实参，则它实际上也定义了默认构造函数。
+
+**练习7.37：使用本节提供的 Sales_data 类，确定初始化下面的变量时分别使用了哪个狗仔函数，然后罗列出每个对象所有数据成员的值。**
+
+```cpp
+Sales_data first_item(cin);
+
+int main() {
+    Sales_data next;
+    Sales_data last("9-999-99999-9");
+}
+```
+
+`Sales_data first_item(cin);` 使用了接受 `std::istream&` 参数的构造函数，该对象的成员值依赖于用户的输入。
+
+`Sales_data next;` 使用了 `Sales_data` 的默认构造函数，其中 `string` 类型的成员 `bookNo` 默认初始化为空字符串，其他几个成员使用类内初始值初始化为 `0`。
+
+`Sales_data last("9-999-99999-9");` 使用了接受 `const string&` 参数的构造函数，其中 `bookNo` 使用了实参初始化为 `"9-999-99999-9"`，其他几个成员使用类内初始值初始化为 `0`。
+
+**练习7.38：有些情况下我们希望提供 cin 作为接受 istream& 参数的构造函数的默认实参，请声明这样的构造函数。**
+
+【出题思路】可以直接在函数声明的地方为 `istream&` 类型的参数设置默认实参 `cin`。
+
+```cpp
+Sales_data(std::istream &is=std::cin) { is >> *this; }
+```
+
+此时该函数具有了默认构造函数的作用，因此我们原来声明的默认构造函数 `Sales_data() = default;` 应该去掉，否则会引起调用的二义性。
+
+**练习7.39：如果接受 string 的构造函数和接受 istream& 的构造函数都使用默认实参，这种行为合法吗？如果不，为什么？**
+
+如果我们为构造函数的全部形参都提供了默认实参（包括为只接受一个形参的构造函数提供默认实参），则该构造函数同时具备了默认构造函数的作用。此时即使我们不提供任何实参地创建类的对象，也可以找到可用的构造函数。
+
+然而，如果按照本题的叙述，我们为两个构造函数同样都赋予了默认实参，则这两个构造函数都具有了默认构造函数的作用。一旦我们不提供任何实参地创建类的对象，则编译器无法判断这两个（重载的）构造函数哪个更好，从而出现了二义性错误。
+
+### 7.5.2 委托构造函数 (delegating constructor)
+
+C++11新标准扩展了构造函数初始值的功能，使得我们可以定义所谓的**委托构造函数**。
+
+一个委托构造函数使用它所属类的其他构造函数执行它自己的初始化过程，或者说它把它自己的一些（或者全部）职责委托给了其他构造函数。
+
+```cpp
+class Sales_data {
+public:
+    // 非委托构造函数使用对应的实参初始化成员
+    Sales_data(std::string s, unsigned cnt, double price) :
+        bookNo(s), units_sold(cnt), revenue(cnt*price) { }
+    // 其余构造函数全部委托给另一个构造函数
+    Sales_data() : Sales_data("", 0, 0) { }
+    Sales_data(std::string s) : Sales_data(s, 0, 0) { }
+    Sales_data(std::istream &is) : Sales_data() { read(is, *this); }
+    // 其他成员与之前的版本一致
+};
+```
+
+类名，后面紧跟圆括号括起来的参数列表，参数列表必须与类中另外一个构造函数匹配。
+
+接受`istream&`的构造函数也是委托构造函数，它委托给了默认构造函数，默认构造函数又接着委托给三参数构造函数。当这些受委托的构造函数执行完后，接着执行`istream&`的构造函数体的内容。它的构造函数题调用`read`函数读取给定的`istream`。
+
+```cpp
+/* 练习7.41：使用委托构造函数重新编写你的Sales data类，给每个构造函数体添加一条语句，令其一旦执行就打印一条信息。用各种可能的方式分别创建Sales data 对象，认真研究每次输出的信息直到你确实理解了委托构造函数的执行顺序。*/
+
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Sales_data {
+friend std::istream &read(std::istream &is, Sales_data &item);
+friend std::ostream &print(std::ostream &os, const Sales_data &item);
+public:
+    // First
+    Sales_data(const string &book, unsigned num, double sellp, double salep)
+    : bookNo(book), units_sold(num), sellingprice(sellp), saleprice(salep)
+    {
+        if (sellingprice)
+            discount = saleprice / sellingprice;
+        cout << "该构造函数接受书号、销售量、原价、实际售价四个信息" << endl;
+    }
+    // Second
+    Sales_data() : Sales_data("", 0, 0, 0)
+    {
+        cout << "该构造函数无须接受任何信息" << endl;
+    }
+    // Third
+    Sales_data(const string &book) : Sales_data(book, 0, 0, 0)
+    {
+        cout << "该构造函数接受书号信息 " << endl;
+    }
+    // Last
+    Sales_data(std::istream &is) : Sales_data()
+    {
+        read(is, *this);
+        cout << "该构造函数接受用户输入的信息" << endl;
+    }
+private:
+    std::string bookNo;         // 书籍编号，隐式初始化为空串
+    unsigned units_sold = 0;    // 销售量，显式初始化为 0
+    double sellingprice = 0.0;  // 原始价格，显式初始化为 0.0
+    double saleprice = 0.0;     // 实售价格，显式初始化为 0.0
+    double discount = 0.0;      // 折扣，显式初始化为 0.0
+};
+
+std::istream &read(std::istream &is, Sales_data &item)
+{
+    is >> item.bookNo >> item.units_sold >> item.sellingprice >> item.saleprice;
+    return is;
+}
+
+std::ostream &print(std::ostream &os, const Sales_data &item)
+{
+    os << item.bookNo << " " << item.units_sold << " " << item.sellingprice
+       << " " << item.saleprice << " " << item.discount;
+    return os;
+}
+
+int main()
+{
+    Sales_data first("978-7-121-15535-2", 85, 128, 109);
+    // 该该构造函数接受书号、销售量、原价、实际售价四个信息
+    Sales_data second;
+    // 该该构造函数接受书号、销售量、原价、实际售价四个信息
+    // 该构造函数无须接受任何信息
+    Sales_data third("978-7-121-15535-2");
+    // 该该构造函数接受书号、销售量、原价、实际售价四个信息
+    // 该构造函数接受书号信息
+    Sales_data last(cin);
+    // 该构造函数接受用户输入的信息
+    return 0;
+}
+```
+
+```cpp
+/* 练习7.42：对于你在练习 7.40 中编写的类，确定哪些构造函数可以使用委托。
+如果可以的话，编写委托构造函数。如果不可以，从抽象概念列表中重新选择一个你认为可以使用委托构造函数的，为挑选出的这个概念编写类定义。
+
+【出题思路】
+委托构造函数是指使用它所属类的其他构造函数执行它自己的初始化过程，因此在类中应该设计一些构造函数使其具备自主的构造函数功能，而把另外一些设计成委托构造函数。*/
+
+class Book
+{
+private:
+    string Name, ISBN, Author, Publisher;
+    double Price = 0;
+public:
+    Book(const string &n, const string &I, double pr, const string &a, const string &p)
+        : Name(n), ISBN(I), Price(pr), Author(a), Publisher(p) { }
+    Book() : Book("", "", 0, "", "") { }
+    Book(std::istream &is) : Book() { is >> *this; }
+}
+```
 
 ### 7.5.3 默认构造函数的作用
 
+默认初始化的情况：
+
+- 当我们在块作用域内不使用任何初始值定义一个非静态变量或者数组时。
+- 当一个类本身含有类类型的成员且使用合成的默认构造函数时。
+- 当类类型的成员没有在构造函数初始值列表中显式地初始化时。
+
+值初始化的情况：
+
+- 在数组初始化的过程中如果我们提供的初始值数量少于数组的大小时。
+- 当我们不使用初始值定义一个局部静态变量时。
+- 当我们通过书写形如`T()`的表达式显式地请求初始化时，其中`T`是类型名（`vector`的一个构造函数只接受一个实参用于说明`vector`大小，它就是使用一个这种形式的实参来对它的元素初始化器进行值初始化）。
+
+```cpp
+class NoDefault {
+    public:
+    NoDefault(const std::string&);
+    // 还有其他成员，但是没有其他构造函数了
+};
+
+struct A {          // 默认情况下 my_mem 是 public 的
+    NoDefault my_mem;
+};
+A a;                // 错误：不能为 A 合成构造函数
+
+struct B {
+    B() { }         // 错误：b_member 没有初始值
+    NoDefault b_member;
+};
+```
+
 #### 使用默认构造函数
+
+```cpp
+Sales_data obj();       // 正确：定义了一个函数而非对象
+if (obj.isbn() == Primer_5th_ed.isbn()) // 错误：obj 是一个函数
+// obj 含义是不接受任何参数的函数并且其返回值是 Sales_data 类型的对象
+```
+
+```cpp
+Sales_data obj;         // 正确：obj 是个默认初始化的对象
+if (obj.isbn() == Primer_5th_ed.isbn()) // 正确：obj 是对象
+```
+
+WARNING:
+
+```cpp
+Sales_data obj();       // 错误：声明了一个函数而非对象
+Sales_data obj2;        // 正确：obj2 是一个对象而非函数
+```
+
+**练习7.46：下面哪些论断是不正确的？为什么？**
+
+【出题思路】 本题旨在考查读者对默认构造函数原理的熟悉程度
+
+(a) 一个类必须至少提供一个构造函数。
+(a)是错误的，`类可以不提供任何构造函数`，这时编译器自动实现一个合成的默认构造函数。
+
+(b) 默认构造函数是参数列表为空的构造函数。
+(b)是错误的，如果某个构造函数`包含若干形参`，但是同时为这些形参都`提供了默认实参`，则该构造函数`也具备默认构造函数的功能`。
+
+(c) 如果对于类来说不存在有意义的默认值，则类不应该提供默认构造函数。
+(c)是错误的，因为`如果一个类没有默认构造函数`，也就是说我们定义了该类的某些构造函数但是没有为其设计默认构造函数，则当编译器确实`需要隐式地使用默认构造函数时`，该类`无法使用`。所以一般情况下，都应该为类构建一个默认构造函数。
+
+(d) 如果类没有定义默认构造函数，则编译器将为其生成一个并把每个数据成员初始化成相应类型的默认值。
+(d)是错误的，对于编译器合成的默认构造函数来说，`类类型`的成员执行`各自所属类`的默认构造函数，`内置类型和复合类型`的成员只对定义在`全局作用域`中的对象执行初始化。
 
 ### 7.5.4 隐式的类类型转换
 
+如果构造函数只接受一个实参，则它实际上定义了转换为此类类型的隐式转换机制，有时我们把这种构造函数称作**转换构造函数**(converting constructor)。
+
+在 `Sales_data` 类中，接受 `string` 的构造函数和接受 `istream` 的构造函数分别定义了这两种类型向 `Sales_data` 隐式转换的规则。也就是说，在需要使用 `Sales_data` 的地方，我们可以使用 `string` 或者 `istream` 作为替代：
+
+```cpp
+string null_book = "9-999-99999-9";
+// 构造一个临时的 Sales_data 对象
+// 该对象的 units_sold 和 revenue 等于 0，bookNo 等于 null_book
+item.combine(null_book);
+```
+
+我们用一个 `string` 实参调用了 `Sales_data` 的 `combine` 成员。该调用是合法的，编译器用给定的 `string` 自动创建了一个 `Sales_data` 对象。新生成的这个(临时) `Sales_data` 对象被传递给 `combine`。
+因为 `combine` 的参数是一个常量引用，所以我们可以给该参数传递一个临时量。
+
+**练习 7.48：假定 `Sales_data` 的构造函数不是 `explicit` 的，则下述定义将执行什么样的操作？**
+
+```cpp
+string null_isbn("9-999-99999-9");
+Sales_data item1(null_isbn);
+Sales_data item2("9-999-99999-9");
+```
+
+如果 `Sales_data` 的构造函数是 `explicit` 的，又会发生什么呢？
+
+【出题思路】
+
+- 构造函数如果不是 `explicit` 的，则 `string` 对象隐式地转换成 `Sales_data` 对象；
+- 相反，构造函数如果是 `explicit` 的，则隐式类类型转换不会发生。
+
+【解答】在本题给出的代码中，第一行创建了一个 `string` 对象，第二行和第三行都是调用 `Sales_data`的构造函数（该构造函数接受一个 `string`）创建它的对象。
+**此处无须任何类类型转换**，所以不论 `Sales_data` 的构造函数是不是 `explicit` 的， `item1` 和 `item2` 都能被正确地创建，它们的 `bookNo` 成员都是 `9-999-99999-9`, 其他成员都是 `0`。
+
+**练习 7.49：对于 `combine` 函数的三种声明，当我们调用 `i.combine(s)` 时分别发生什么情况？其中 `i` 是一个 `Sales_data`，而 `s` 是一个 `string` 对象。**
+
+```cpp
+Sales_data &combine(Sales_data);
+Sales_data &combine(Sales_data&);
+Sales_data &combine(const Sales_data&) const;
+```
+
+【解答】
+(a) 是正确的，编译器首先用给定的 `string` 对象 `s` 自动创建一个 `Sales_data` 对象，然后这个新生成的临时对象传给 `combine` 的形参（类型是 `Sales_data`），函数正确执行并返回结果。
+
+(b) 无法编译通过，因为 `combine` 函数的参数是一个非常量引用，而 `s` 是一个 `string` 对象，编译器用 `s` 自动创建一个 `Sales_data` 临时对象，但是这个新生成的临时对象无法传递给 `combine` 所需的非常量引用。
+如果我们把函数声明修改为 `Sales_data &combine(const Sales_data&);` 就可以了。
+
+(c) 无法编译通过，因为我们把 `combine` 声明成了常量成员函数，所以该函数**无法修改数据成员的值**。
+
 #### 只允许一步类类型转换
+
+下面的代码隐式地使用了两种转换规则，所以它是错误的：
+
+```cpp
+// 错误：需要用户定义的两种转换
+// (1) 把 "9-999-99999-9" 转换成 Sales_data
+// (2) 再把这个(临时的) string 转换成 Sales_data
+item.combine("9-999-99999-9");
+```
+
+如果想完成上述调用，可以显式地把字符串转换成 string 或者 Sales_data 对象：
+
+```cpp
+// 正确：显式地转换成 string，隐式地转换成 Salese_data
+item.combine(stirng("9-999-99999-9"));
+// 正确：隐式地转换成 string，显式地转换成 Sales_data
+item.combine(Sales_data("9-999-99999-9"));
+```
 
 #### 类类型转换不是总有效
 
+```cpp
+// 使用 istream 构造函数创建一个函数传递给 combine
+item.combine(cin);
+```
+
+这段代码隐式地把 `cin` 转换成 `Sales_data`，这个转换执行了接受一个 `istream` 的 `Sales_data` 构造函数。该函数通过读取标准输入创建了一个（临时的）`Sales_data` 对象，随后将得到的对象传递给 `combine`。
+
+`Sales_data` 对象是个临时量，一旦 `combine` 完成我们就不能再访问它了。
+实际上，我们构建了一个对象，先将它的值加到 `item` 中，随后将其丢弃。
+
 #### 抑制构造函数定义的隐式转换
+
+在要求隐式转换的程序上下文中，我们可以通过将构造函数声明为 explicit 加以阻止：
+
+```cpp
+class Sales_data {
+public:
+    Sales_data() = default;
+    Sales_data(const std::string &s, unsigned n, double p) :
+               bookNo(s), units_sold(n), revenue(p*n) { }
+    explicit Sales_data(const std::string &s) : booKNo(s) { }
+    explicit Sales_data(std::istream&);
+    // 其他成员与之前的版本一致
+};
+```
+
+此时没有任何构造函数能用于隐式地创建 `Sales_data` 对象，之前的两种用法都无法通过编译。
+
+```cpp
+item.combine(null_book);    // 错误：string 构造函数是 explicit 的
+item.combine(cin);          // 错误：istream 构造函数是 explicit的
+```
+
+关键字 explicit 只对一个实参的构造函数有效。
+需要多个实参的构造函数不能用于执行隐式转换，所以无须将这些构造函数指定为 explicit 的。
+
+只能在类内声明构造函数时使用 explicit 关键字，在类外部定义时不应重复：
+
+```cpp
+// 错误：explicit 关键字只允许出现在类内的构造函数声明处
+explicit Sales_data::Sales_data(istream& is)
+{
+    read(is, *this);
+}
+```
+
+**练习 7.47：说明接受一个`string`参数的`Sales_data`构造函数是否应该是`explicit`的，并解释这样做的优缺点。**
+
+【出题思路】 `explicit` 用于抑制类类型的隐式转换，读者需要知道 `explicit` 的长处和不足。
+
+【解答】 接受一个 `string` 参数的 `Sales_data` 构造函数应该是 `explicit` 的，否则，编译器就有可能自动把一个 `string` 对象转换成 `Sales_data` 对象，这种做法显得有些随意，某些时候会与程序员的初衷相违背。
+
+使用 `explicit` 的优点是避免因隐式类类型转换而带来意想不到的错误，缺点是当用户的确需要这样的类类型转换时，不得不使用略显烦琐的方式来实现。
 
 #### `explicit`构造函数只能用于直接初始化
 
+当我们执行拷贝形式的初始化时，我们只能使用直接初始化而不能使用 `explicit` 构造函数：
+
+```cpp
+Sales_data item1(null_book);    // 正确：直接初始化
+// 错误：不能将 explicit 构造函数用于拷贝形式的初始化过程
+Sales_data item2 = null_book;
+```
+
+当我们用 `explicit` 关键字声明构造函数时，它将只能以直接初始化的形式使用，不能用于拷贝形式的初始化过程。而且，编译器将不会再自动转换过程中使用该构造函数。
+
 #### 为转换显式地使用构造函数
 
+尽管编译器不会将 `explicit` 的构造函数用于隐式转换过程，但是我们可以使用这样的构造函数显式地强制进行转换：
+
+```cpp
+// 正确：实参是一个显式构造的 Sales_data 对象
+item.combine(Sales_data(null_book));
+// 正确：static_cast 可以使用 explicit 的构造函数
+item.combine(static_cast<Sales_data>(cin));
+```
+
+在第一个调用中，我们直接使用 `Sales_data` 的构造函数，该调用通过接受 `string` 的构造函数创建了一个临时的 `Sales_data` 对象。
+
+在第二个调用中，我们使用 `static_cast` 执行了显式的而非隐式的转换。其中，`static_cast` 使用 `istream` 构造函数创建了一个临时的 `Sales_data` 对象。
+
 #### 标准库中含有显示构造函数的类
+
+- 接受一个单参数的 `const char*` 的 `string` 构造函数不是 explicit 的。
+- 接受一个容量参数的 `vector` 构造函数是 explicit 的。
 
 ### 7.5.5 聚合类
 
